IDP-1516 Reduce Guava dependency consent-impl
https://issues.shibboleth.net/jira/browse/IDP-1516